--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -14,8 +12,8 @@
   <meta name="msapplication-navbutton-color" content="#000">
   <meta name="apple-mobile-web-app-status-bar-style" content="#000">
   <title>funny - frontend developer & UI designer</title>
-  <meta name="title" content="funny - frontend developer & UI designer">
-  <meta name="description" content="Hey Stranger, Looking for a frontend developer or UI designer? Hire Me">
+  <meta name="title" content="q0w0p">
+  <meta name="description" content="ERROR">
   <meta name="keywords"
     content="web developer, front end engineer, front end, ui, front end developer, ui deisgner, frontend designer, hire front end developer, hire front end freelancers, hire ui deisgner freelancers">
   <meta name="robots" content="index, follow">
@@ -23,7 +21,7 @@
   <meta name="language" content="English">
   <meta name="revisit-after" content="2 days">
   <meta name="author" content="imfunniee">
-  <link rel="canonical" href="https://imfunniee.github.io/" />
+  <link rel="canonical" href="https://supahotmojo.nl" />
   <link rel="stylesheet" href="./assets/css/index.css" />
 </head>
 
@@ -41,9 +39,9 @@
         <li style="float:left;">
           <img src="./assets/images/logo.png" alt="funny's logo" />
         </li>
-        <li><a class="swipe" href="mailto:imfunniee@gmail.com" tabindex="4">contact</a></li>
-        <li><a class="swipe" href="https://dribbble.com/imfunniee" tabindex="3">ui</a></li>
-        <li><a class="swipe" href="https://github.com/imfunniee" tabindex="2">web</a></li>
+        <li><a class="swipe" href="mailto:smg960fmojo@gmail.com" tabindex="4">contact</a></li>
+        <li><a class="swipe" href="https://supahotbami.nl/" tabindex="3">ui</a></li>
+        <li><a class="swipe" href="https://github.com/supahotmojo" tabindex="2">web</a></li>
         <li><a class="swipe" tabindex="1" onclick="alert('working on it :)')">showreel</a></li>
       </ul>
     </header>
@@ -52,21 +50,21 @@
       hey stranger, <br />
       let's not be strangers <br />anymore
     </div>
-    <button onclick="window.location = 'mailto:imfunniee@gmail.com'">hire me</button>
+    <button onclick="window.location = 'mailto:smg960fmojo@gmail.com">hire me</button>
     <footer>
       <ul>
         <li style="float:left"><b id="distance">0.00</b> m</li>
         <li style="margin-right:10px;">
-          <a href="https://www.google.com/search?q=imfunniee"><i class="fab fa-google"></i></a>
+          <a href="https://windows93.net/"><i class="fab fa-google"></i></a>
         </li>
         <li>
-          <a href="https://twitter.com/imfunnieee"><i class="fab fa-twitter"></i></a>
+          <a href="ERROR"><i class="fab fa-twitter"></i></a>
         </li>
         <li>
-          <a href="https://dribbble.com/imfunniee"><i class="fab fa-dribbble"></i></a>
+          <a href="ERROR"><i class="fab fa-dribbble"></i></a>
         </li>
         <li>
-          <a href="https://github.com/imfunniee"><i class="fab fa-github"></i></a>
+          <a href="ERROR"><i class="fab fa-github"></i></a>
         </li>
       </ul>
     </footer>
