--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
   <meta name="title" content="q0w0p">
   <meta name="description" content="ERROR">
   <meta name="keywords"
-    content="web developer, front end engineer, front end, ui, front end developer, ui deisgner, frontend designer, hire front end developer, hire front end freelancers, hire ui deisgner freelancers">
+    content="Dev.">
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
   <meta name="revisit-after" content="2 days">
-  <meta name="author" content="imfunniee">
   <link rel="canonical" href="https://supahotmojo.nl" />
   <link rel="stylesheet" href="./assets/css/index.css" />
 </head>
@@ -45,7 +44,7 @@
         <li><a class="swipe" tabindex="1" onclick="alert('working on it :)')">showreel</a></li>
       </ul>
     </header>
-    <span>frontend developer & ui designer</span>
+    <span> UNKNOWN </span>
     <div>
       hey stranger, <br />
       let's not be strangers <br />anymore
