--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       hey stranger, <br />
       let's not be strangers <br />anymore
     </div>
-    <button onclick="window.location = 'mailto:smg960fmojo@gmail.com">hire me</button>
+    <button onclick="window.location = 'mailto:smg960fmojo@gmail.com">😁</button>
     <footer>
       <ul>
         <li style="float:left"><b id="distance">0.00</b> m</li>
